# 2025Compiler-labs

./: README.md
input/: input3.cmm
lab1/Code/: CMakeLists.txt  Node.h  lex.yy.c  lexical.l  main.c  parser  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y
lab1/Code/test/: test2.cmm
lab2/Code/: Makefile  lex.yy.c  parser  semantic.c  semantic.h  syntax.output  syntax.tab.c  syntax.tab.h
lab3/code/: Makefile  intercode.c  intercode.h  lex.yy.c  lexical.l  out1.ir  parser  syntax.tab.c  syntax.tab.h
